src/css/main.css
main > .content {
  min-height: 0;
}

main.article {
  min-height: calc(100vh - var(--body-top) - 60px);
  display: flex;
  flex-direction: column;
}

@media screen and (max-width: 1024px) {
  aside.toc.sidebar {
    display: none;
  }

  main > .content {
    overflow-x: auto;
    height: 100%;
  }
}

body.status-404 main > .content {
  min-height: 100vh;
}

.home main {
  background-color: var(--home-background);
}

@media screen and (min-width: 1024px) {
  main {
    margin: 0 auto;
    min-width: 0; /* min-width: 0 required for flexbox to constrain overflowing elements */
  }

  main:not(.labs) {
    width: calc(100% - var(--nav-width));
  }

  .home main {
    margin: 0;
    padding-top: 0;
    width: 100%;
  }

  main.index {
    flex: 1;
    max-width: unset;
    margin: unset;
  }

  main > .content {
    display: flex;
    /* display: grid; */
    /* grid-template-columns: 3fr 1fr; */
    gap: 50px;
    justify-content: center;
    /* Prevent CLS by isolating content layout */
    contain: layout;
  }

  aside.toc.embedded {
    display: none;
  }

  aside.toc.sidebar {
    order: 1;
  }
}

@media screen and (min-width: 1400px) {
  aside.toc.sidebar {
    flex-basis: var(--toc-width--widescreen);
  }

  main > .content {
    gap: 150px;
  }
}

